[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui/start_page.gd" type="Script" id=1]
[ext_resource path="res://gui/but_container.gd" type="Script" id=2]
[ext_resource path="res://gui/main.tres" type="Theme" id=3]

[node name="start_page" type="Node2D"]
script = ExtResource( 1 )

[node name="but_container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 240.0
margin_bottom = 128.0
rect_min_size = Vector2( 240, 128 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 2 )

[node name="start_but" type="Button" parent="but_container"]
margin_right = 240.0
margin_bottom = 27.0
theme = ExtResource( 3 )
text = "Start"

[node name="stop_but" type="Button" parent="but_container"]
margin_top = 31.0
margin_right = 240.0
margin_bottom = 58.0
theme = ExtResource( 3 )
text = "Stop"

[node name="settings_but" type="Button" parent="but_container"]
margin_top = 62.0
margin_right = 240.0
margin_bottom = 89.0
theme = ExtResource( 3 )
text = "Settings"

[node name="exit_but" type="Button" parent="but_container"]
margin_top = 93.0
margin_right = 240.0
margin_bottom = 120.0
theme = ExtResource( 3 )
text = "Exit"
[connection signal="pressed" from="but_container/start_but" to="." method="_on_start_but_pressed"]
[connection signal="pressed" from="but_container/stop_but" to="but_container" method="_on_stop_but_pressed"]
[connection signal="pressed" from="but_container/settings_but" to="." method="_on_settings_but_pressed"]
[connection signal="pressed" from="but_container/exit_but" to="but_container" method="_on_exit_but_pressed"]
